[package]
name = "crypto-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2.1.0", features = ["json-abi", "dyn-abi", "signer-local", "providers", "reqwest"] }
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros"] }
url = "2.5.8"
